--- a/contactus.html
+++ b/contactus.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Amsterdam l'huile</title>
+    <title>Amsterdam l'huile pure France</title>
 
     <!-- Bootstrap -->
     <link href="css/bootstrap-4.4.1.css" rel="stylesheet">
@@ -62,7 +62,7 @@
   		  <div class="col-lg-6 col-form2">
 			
 			<h2 class="text-center">Contakt</h2><br>
-			<form action="https://rsoholland.us13.list-manage.com/subscribe/post?u=a249d71216855de0bc2f148cf&amp;id=d84515cbb6&WEBSITE=proxy198 adw v19" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+			<form action="https://rsoholland.us13.list-manage.com/subscribe/post?u=a249d71216855de0bc2f148cf&amp;id=d84515cbb6&WEBSITE=FR-proxy198 adw v19" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
 			<p>
 	    	Email*
 	    	<input type="email" value="" name="EMAIL" class="form-control" id="mce-EMAIL" placeholder="Votre email">
