--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Amsterdam l'huile</title>
-    <!-- Bootstrap version 22-12-2020 created by Amsterdam l'huile-->
+    <title>Amsterdam l'huile pure France</title>
+    <!-- Bootstrap version 22-12-2020 created by huilepuredamsterdam-->
     <link href="css/bootstrap-4.4.1.css" rel="stylesheet">
 	<script async="" src="https://embed.tawk.to/58bde3f6ab48ef44ecd16966/default" charset="UTF-8" crossorigin="*"></script>
 		
@@ -16,7 +16,7 @@
 <body>
   
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <a class="navbar-brand" href="#">Amsterdam l'huile</a>
+      <a class="navbar-brand" href="#">Amsterdam l'huile France</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
       </button>
@@ -218,7 +218,7 @@
   		  <div class="col-lg-6 col-form2">
 			
 			<h2 class="text-center">Contact</h2><br>
-			<form action="https://rsoholland.us13.list-manage.com/subscribe/post?u=a249d71216855de0bc2f148cf&amp;id=d84515cbb6&WEBSITE=proxy198 adw v19" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+			<form action="https://rsoholland.us13.list-manage.com/subscribe/post?u=a249d71216855de0bc2f148cf&amp;id=d84515cbb6&WEBSITE=FR-proxy198 adw v19" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
 			<p>
 	    	Email*
 	    	<input type="email" value="" name="EMAIL" class="form-control" id="mce-EMAIL" placeholder="Votre email">
